--- a/cartas.html
+++ b/cartas.html
@@ -10,7 +10,8 @@
     <p class="p1">
     	A
     <br>
-    	♦</p>
+	♦</p>
+    <img src="cartastyles/images/A.jpg" class="img5">
 </div>
 <div class="d2">
     <p class="p2">
@@ -18,24 +19,26 @@
     <br>
     ♣
     </p>
+    <img src="cartastyles/images/K.jpg" class="img4">
 </div>
 <div class="d3">
     <p class="p3">Q
     <br>
 	♥
 	</p>
+    <img src="cartastyles/images/Q.jpg" class="img3">
 </div>
 <div class="d4">
     <p class="p4">J
     <br>
     ♠</p>
+    <img src="cartastyles/images/J.jpg" class="img2">
 </div>
 <div class="d5">
     <p class="p5">10
     <br>
-    ♦
-</p>
-<img src="cartastyles/images/10.jpg">
+    ♦</p>
+    <img src="cartastyles/images/10.jpg" class="img1">
 </div>
 </body>
 </html>
